# internal/order/delivery/http/dto/find_order.go
@@ -1,0 +1,8 @@
+package dto
+
+import "github.com/dinorain/pinjembuku/pkg/utils"
+
+type OrderFindResponseDto struct {
+	Meta utils.PaginationMetaDto `json:"meta"`
+	Data interface{}             `json:"data"`
+}
